# sales-forecasting

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-azz-data-exploration.ipynb
sales_forecasting/: __init__.py  dataset.py  features.py  plots.py
sales_forecasting/modeling/: main.py  predict.py  train.py
